Added files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,10 @@ sites/*/settings*.php
 # Ignore paths that contain user-generated content.
 sites/*/files
 sites/*/private
+sites/*/files_private
  
 /.settings
 /.buildpath
 /.project
+/FirePHPCore/
+/nbproject/
