--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
-# Ignore configuration files that may contain sensitive information.
+ # Ignore configuration files that may contain sensitive information.  
 sites/*/settings*.php
+
 
 # Ignore paths that contain user-generated content.
 sites/*/files
 sites/*/private
+ 
+/.settings
+/.buildpath
+/.project
+
